--- a/styles.css
+++ b/styles.css
@@ -168,3 +168,40 @@ main section.cards-list.container article.card .card-item.join-date{
 .maxi-card-item.join-date{
     margin: 0px 0px 5px 0px;
 }
+
+/* page styling */
+footer section.pages.container,
+footer section.pages.container *{
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    gap: 10px;
+}
+
+footer section.pages.container article.page-element{
+    width: 30px;
+    height: 30px;
+    font-weight: normal;
+    /* border: 1px solid black; */
+    border-radius: 5px;
+    background-color: white;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    color: rgb(142, 134, 135);
+}
+footer section.pages.container article.page-element:hover{
+    cursor: pointer;
+    color: grey;
+    font-weight: bold;
+}
+footer section.pages.container article.page-element.current-page {
+    background-color: grey;
+    color: white;
+    font-weight: bold;
+    border: 1px solid darkgrey;
+}
+footer section.pages.container article.page-element.current-page {
+    cursor:not-allowed;
+}
