mouse cursor is changed to pointer on hover over cards to maximize or close button when maximized card is present

--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,9 @@ main section.cards-list.container article.card{
     align-items: center;
     justify-items: center;
 }
+main section.cards-list.container article.card:hover{
+    cursor: pointer;
+}
 
 /* main section.cards-list.container article.card .card-item{
     
@@ -144,6 +147,9 @@ main section.cards-list.container article.card .card-item.join-date{
     align-self: flex-end;
     margin: 0px;
     position: fixed;
+}
+.maxi-card-item.close:hover{
+    cursor: pointer;
 }
 .maxi-card-item.portrait{
     width: 150px;
