--- a/styles.css
+++ b/styles.css
@@ -122,61 +122,10 @@ main section.cards-list.container article.card .card-item.join-date{
     align-items: center;
     justify-items: center;
     gap: 30px; */
-}
-.maxi-card{
-    width: 400px;
-    height: 400px;
-    box-shadow:rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    border-radius: 5px;
-    background-color: white;
-    display: flex;
-    gap: 0px;
-    flex-direction: column;
-    /* justify-content: center; */
-    /* align-content: center; */
-    /* align-items: center; */
-    justify-content: flex-start;
-    align-content: center;
-    justify-items: center;
-    align-items: center;
-    padding: 15px;
-    border-top-right-radius: 25px;
-}
-.maxi-card-item.close{
-    width: 20px;
-    height: 20px;
-    align-self: flex-end;
-    margin: 0px;
-    position: fixed;
+    grid-template-areas: ;
 }
 .maxi-card-item.close:hover{
     cursor: pointer;
-}
-.maxi-card-item.portrait{
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
-    border-radius: 50%;
-    margin: 20px 0px 10px 0px;
-}
-.maxi-card-item.name{
-    font-size: 32px;
-    margin: 2.5px 0px;
-}
-.maxi-card-item.name.double-line{
-    font-size: 28px;
-}
-.maxi-card-item.email{
-    margin: 2.5px 0px 0px 0px;
-}
-.maxi-card-item.horizontal-line{
-    width: 90%;
-    height: 0px;
-
-    margin: 20px 0px;
-}
-.maxi-card-item.join-date{
-    margin: 0px 0px 5px 0px;
 }
 .arrow:hover{
     cursor: pointer;
@@ -218,3 +167,11 @@ footer section.pages.container article.page-element.current-page {
 footer section.pages.container article.page-element.current-page {
     cursor:not-allowed;
 }
+
+button.edit{
+    width: 100px;
+    border: 1px solid darkgrey;
+    border: 1px solid rgb(142, 134, 135);
+}
+
+
