--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,8 @@ main section.cards-list.container article.card .card-item.join-date {
 
 /* maxi article */
 main section.maximized article.maxi-card,
-main section.maximized article.edit-card{
+main section.maximized article.edit-card,
+main section.maximized article.new-card{
     width: 400px;
     height: 400px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
@@ -155,7 +156,8 @@ main section.maximized article.edit-card{
 
 /* maxi containers */
 main section.maximized article.maxi-card .upper-container,
-main section.maximized article.edit-card .upper-container{
+main section.maximized article.edit-card .upper-container,
+main section.maximized article.new-card .upper-container{
     grid-area: up;
     width: 100%;
     height: 100%;
@@ -176,7 +178,8 @@ main section.maximized article.maxi-card .left-container{
     grid-area: le;
 }
 main section.maximized article.maxi-card .main-container,
-main section.maximized article.edit-card .main-container{
+main section.maximized article.edit-card .main-container,
+main section.maximized article.new-card .main-container{
     grid-area: ma;
     width: 100%;
     height: 100%;
@@ -191,19 +194,21 @@ main section.maximized article.maxi-card .right-container{
     grid-area: ri;
 }
 main section.maximized article.maxi-card .lower-container,
-main section.maximized article.edit-card .lower-container{
+main section.maximized article.edit-card .lower-container,
+main section.maximized article.new-card .lower-container{
     grid-area: lo;
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: row;
     align-content: center;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 /* maxi and edit elements */
 main section.maximized article.maxi-card * .close,
-main section.maximized article.edit-card * .close{
+main section.maximized article.edit-card * .close,
+main section.maximized article.new-card * .close{
     width: 20px;
     height: 20px;
     margin: 0px;
@@ -216,7 +221,8 @@ main section.maximized article.maxi-card * .delete{
     -webkit-user-drag: none;
 }
 main section.maximized article.maxi-card * .portrait,
-main section.maximized article.edit-card * .portrait{
+main section.maximized article.edit-card * .portrait,
+main section.maximized article.new-card * .portrait{
     width: 150px;
     height: 150px;
     object-fit: cover;
@@ -240,18 +246,25 @@ main section.maximized article.maxi-card * .arrow{
     -webkit-user-drag: none;
 }
 
-/* only edit elements */
+/* only edit-card and new-card elements */
 main section.maximized article.edit-card .left-container,
-main section.maximized article.edit-card .right-container{
+main section.maximized article.edit-card .right-container,
+main section.maximized article.new-card .left-container,
+main section.maximized article.new-card .right-container{
     visibility: hidden;
 }
-main section.maximized article.edit-card * .delete{
+main section.maximized article.edit-card * .delete,
+main section.maximized article.new-card * .delete{
     visibility: hidden;
 }
 main section.maximized article.edit-card * .name,
 main section.maximized article.edit-card * .email,
 main section.maximized article.edit-card * input.join-date,
-main section.maximized article.edit-card * input.age{
+main section.maximized article.edit-card * input.age,
+main section.maximized article.new-card * .name,
+main section.maximized article.new-card * .email,
+main section.maximized article.new-card * input.join-date,
+main section.maximized article.new-card * input.age{
         color: rgb(128, 128, 128);
         font-weight: bold;
         font-style: italic;
@@ -263,17 +276,20 @@ main section.maximized article.edit-card * input.age{
         outline: none;
         text-align: center;
 }
-main section.maximized article.edit-card * .name{
+main section.maximized article.edit-card * .name,
+main section.maximized article.new-card * .name{
     font-size: 20px;
     height: 37px;
     margin: 2.5px 0px;
 }
-main section.maximized article.edit-card * .email{
+main section.maximized article.edit-card * .email,
+main section.maximized article.new-card * .email{
     font-size: 14px;
     height: 18px;
     margin: 2.5px 0px 0px 0px;
 }
-main section.maximized article.edit-card * .join-date *{
+main section.maximized article.edit-card * .join-date *,
+main section.maximized article.new-card * .join-date *{
     margin: 0px 0px 5px 0px;
 }
 main section.maximized article.edit-card * .horizontal-line{
